tests/negative/runtime/readlines_missing/input.ci
void main() {
    string[] lines = readLines("missing.txt");
    print(toString(count(lines)) + "\n");
}
